January - 0.9.2.8.1
- Bugfix: Adding new QSO that implies a DXCC or WAZ status already worked failed.
- UI Change: Freq in the Satellite tab is now not deleted when a new QSO is added.
- New translation: Catalan by Josep (Thank you!)

January - 0.9.2.8
- Important Optimization on KLog speed on start and general use.
- New satellites (AO-91 & AO-92) added.
- Added ALL the ADIF 3.0.7 fields (except the _INTL ones).
- New feature: New menus to export ADIF files for LoTW and manage LoTW status.
- GUI: Implemented an error reporting for the users for main errors
- GUI: When a satellite is selected the main bands are automatically proposed.
- GUI: QSO band is now linked to the uplink & downlink bands in the satellite tab.
- Bugfix: Some ADIF fields were not properly imported/exported.
- Bugfix: When searching calls like 1A0XX, 2E0XX, ... no results were found but there are with 3D0XXX
- Bugfix: If an empty log was selected on config file, on next KLog start KLog crashed.
- Bugfix: Doubleclicking on the log to edit was sometimes causing the band/mode data to be shown as a number instead of the human readable name.
- Bugfix: Windows version did not detected the DB movement correctly.
- New translation: Polish by LA7RRA (Thank you!).
- New translation: Danish by Joe (Thank you!).
- Updated translations: Croatian (TNX M0NKC), Italian (TNX IU5HIU), Spanish (EA4TV)
- Several internal updates.

September 2017 - 0.9.2.7
- KLog offers the possibility to move the DB to another path (maybe a DropBox folder!)
- New Operating systems recognized in runtime.
- Updated the references to macOS from OSX.
- Updated the list of valid modes up to ADIF 3.0.6.
- Updated the list of valid propagation modes up to ADIF 3.0.6.
- Update the 136KHz band limits to the new US licenses.
- Optimized the speed of printing the log.
- GUI: Added the QSO information done in a year on the DX-Marathon area.
- GUI: Simplified the way active bands/modes are selected.
- GUI: Satellite tab is redesigned.